# ink

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
sandbox/: CMakeLists.txt  sandbox.cpp
src/: CMakeLists.txt
src/core/: camera.cpp  camera.h  film.cpp  film.h  filter.cpp  filter.h  ink.h  log.cpp  log.h  random.cpp  renderer.cpp  renderer.h  shape.cpp  shape.h
src/ink/: CMakeLists.txt
src/ink/core/: camera.cpp  camera.h  film.cpp  film.h  filter.h  ink.h  inkrenderer.cpp  inkrenderer.h  integrator.cpp  integrator.h  log.cpp  log.h  material.h  renderer.cpp  renderer.h  scene.cpp  scene.h  settings.h  shape.cpp  shape.h
src/ink/math/: common.h  point.h  random.h  ray.h  transform.cpp  transform.h  vector.h  vector2.h  vector3.h
src/inker/: CMakeLists.txt  inker.cpp
src/math/: geometry.h  normal.h  point.h  random.h  ray.h  transform.cpp  transform.h  vector.h
src/press/: CMakeLists.txt  helper_shape.h  press.cpp  scene_samples.h
src/sandbox/: CMakeLists.txt  helper_shape.h  sandbox.cpp  scene_samples.h
src/viewer/: CMakeLists.txt  viewer.cpp
