INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE (GLOB CORE_SOURCES "core/*.h" "core/*.cpp")
FILE (GLOB MATH_SOURCES "math/*.h" "math/*.cpp")

SOURCE_GROUP("core" FILES ${CORE_SOURCES})
SOURCE_GROUP("math" FILES ${MATH_SOURCES})

ADD_LIBRARY(ink STATIC ${CORE_SOURCES} ${MATH_SOURCES})

message ("PROJECT_BINARY_DIR: " ${PROJECT_BINARY_DIR})


INSTALL (TARGETS ink DESTINATION ${PROJECT_BINARY_DIR}/bin)
